--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #e0f7f5; /* azul aguamarina claro */
+      background-color: #e0f7f5;
     }
 
     header {
-      background-color: #4dd0e1; /* azul más claro */
+      background-color: #4dd0e1;
       padding: 1em;
       text-align: center;
       color: white;
@@ -43,11 +43,6 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       background-color: white;
       position: relative;
-      transition: transform 0.2s;
-    }
-
-    .producto-tarjeta:hover {
-      transform: scale(1.03);
     }
 
     .producto-imagen {
@@ -71,7 +66,7 @@
       position: absolute;
       bottom: 10px;
       right: 10px;
-      background-color: #ff6f61; /* nuevo color para botón de carrito */
+      background-color: #ff6f61;
       border: none;
       border-radius: 50%;
       color: white;
@@ -79,11 +74,6 @@
       height: 35px;
       font-size: 18px;
       cursor: pointer;
-      transition: background-color 0.3s;
-    }
-
-    .producto-boton:hover {
-      background-color: #e64a39;
     }
 
     #carrito {
@@ -157,25 +147,177 @@
       }
 
       .producto-tarjeta {
-        width: 45%; /* 2 tarjetas por fila en móvil */
+        width: 45%;
         margin: 10px 5px;
-      }
-
-      header {
-        padding: 1em 0.5em;
-      }
-
-      nav a {
-        display: block;
-        margin: 5px 0;
       }
     }
   </style>
 </head>
 <body>
-  <!-- Contenido HTML igual que antes (sin cambios estructurales) -->
-  <!-- Aquí puedes dejar el resto del contenido HTML y JS igual, ya están listos para funcionar -->
+  <header>
+    <img id="company-logo" src="" alt="Logo de la empresa">
+    <h1>Sorpresas in Style</h1>
+    <nav>
+      <a href="#">Inicio</a>
+    </nav>
+  </header>
 
-  <!-- ... (no se repite todo por espacio, ya lo tienes completo arriba) -->
+  <main>
+    <section id="productos-container"></section>
+
+    <section id="carrito">
+      <h2>Carrito de Compras</h2>
+      <ul id="lista-carrito"></ul>
+      <p>Total: $<span id="total">0</span></p>
+      <button onclick="comprar()">Comprar</button>
+    </section>
+  </main>
+
+  <!-- Modal -->
+  <div id="adminModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>Panel de Administración</h2>
+      <form id="formulario-producto">
+        <input type="text" id="nombreProducto" placeholder="Nombre del desayuno" required><br><br>
+        <input type="number" id="precioProducto" placeholder="Precio" required><br><br>
+        <input type="file" id="imagenProducto" accept="image/*" required><br><br>
+        <button type="submit" class="admin-button">Agregar Desayuno</button>
+      </form>
+      <hr>
+      <h3>Desayunos Agregados</h3>
+      <div id="productos-agregados"></div>
+    </div>
+  </div>
+
+  <button id="botonAdmin">⚙️</button>
+
+  <script>
+    var modal = document.getElementById("adminModal");
+    var botonAdmin = document.getElementById("botonAdmin");
+    var span = document.getElementsByClassName("close")[0];
+    var productosContainer = document.getElementById("productos-container");
+    var productosAgregados = document.getElementById("productos-agregados");
+
+    var productos = JSON.parse(localStorage.getItem("productos")) || [];
+
+    botonAdmin.onclick = function() {
+      modal.style.display = "block";
+    }
+
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+
+    document.getElementById("formulario-producto").addEventListener("submit", function(event) {
+      event.preventDefault();
+      var nombre = document.getElementById("nombreProducto").value;
+      var precio = document.getElementById("precioProducto").value;
+      var imagen = document.getElementById("imagenProducto").files[0];
+
+      if (imagen) {
+        var reader = new FileReader();
+        reader.onloadend = function() {
+          var nuevoProducto = {
+            nombre: nombre,
+            precio: precio,
+            imagen: reader.result
+          };
+          productos.push(nuevoProducto);
+          localStorage.setItem("productos", JSON.stringify(productos));
+          actualizarVista();
+        };
+        reader.readAsDataURL(imagen);
+      }
+
+      this.reset();
+    });
+
+    function actualizarVista() {
+      productosContainer.innerHTML = '';
+      productosAgregados.innerHTML = '';
+      productos.forEach((producto, index) => {
+        var productoHTML = `
+          <div class="producto-tarjeta">
+            <img src="${producto.imagen}" alt="${producto.nombre}" class="producto-imagen">
+            <div class="producto-nombre">${producto.nombre}</div>
+            <div class="producto-precio">$${producto.precio}</div>
+            <button class="producto-boton" onclick="agregarAlCarrito(${index})">🛒</button>
+          </div>
+        `;
+        productosContainer.innerHTML += productoHTML;
+
+        var adminHTML = `
+          <div class="producto-tarjeta">
+            <img src="${producto.imagen}" alt="${producto.nombre}" class="producto-imagen">
+            <div class="producto-nombre">${producto.nombre}</div>
+            <div class="producto-precio">$${producto.precio}</div>
+            <button class="admin-button" onclick="eliminarProducto(${index})">Eliminar</button>
+            <button class="admin-button" onclick="editarProducto(${index})">Editar</button>
+          </div>
+        `;
+        productosAgregados.innerHTML += adminHTML;
+      });
+    }
+
+    var carrito = JSON.parse(localStorage.getItem("carrito")) || [];
+
+    function agregarAlCarrito(index) {
+      var producto = productos[index];
+      carrito.push(producto);
+      localStorage.setItem("carrito", JSON.stringify(carrito));
+      actualizarCarrito();
+    }
+
+    function actualizarCarrito() {
+      var listaCarrito = document.getElementById("lista-carrito");
+      listaCarrito.innerHTML = '';
+      var total = 0;
+      carrito.forEach(producto => {
+        var li = document.createElement("li");
+        li.textContent = `${producto.nombre} - $${producto.precio}`;
+        listaCarrito.appendChild(li);
+        total += parseFloat(producto.precio);
+      });
+      document.getElementById("total").textContent = total.toFixed(2);
+    }
+
+    function eliminarProducto(index) {
+      productos.splice(index, 1);
+      localStorage.setItem("productos", JSON.stringify(productos));
+      actualizarVista();
+    }
+
+    function editarProducto(index) {
+      var nuevoNombre = prompt("Nuevo nombre del producto:", productos[index].nombre);
+      var nuevoPrecio = prompt("Nuevo precio del producto:", productos[index].precio);
+      if (nuevoNombre && nuevoPrecio) {
+        productos[index].nombre = nuevoNombre;
+        productos[index].precio = nuevoPrecio;
+        localStorage.setItem("productos", JSON.stringify(productos));
+        actualizarVista();
+      }
+    }
+
+    function comprar() {
+      if (carrito.length > 0) {
+        alert("¡Gracias por tu compra!");
+        carrito = [];
+        localStorage.setItem("carrito", JSON.stringify(carrito));
+        actualizarCarrito();
+      } else {
+        alert("Tu carrito está vacío.");
+      }
+    }
+
+    actualizarVista();
+    actualizarCarrito();
+  </script>
 </body>
 </html>
